<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:background="@drawable/bg_pitch"
        tools:ignore="UselessParent">

        <View
            android:layout_width="match_parent"
            android:layout_height="144dp"
            android:alpha="0.5"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <TextView
                android:id="@+id/tv_hello"
                style="@style/BaseTextStyleWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <TextView
                style="@style/BaseTextStyleWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_are_you" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:id="@+id/tv_full_date"
                style="@style/BaseTextStyleWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end" />
        </LinearLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/ll_chart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/worked_status_shape"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/tv_worked_pitch_title"
                        style="@style/BaseTextStyleBlack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:minLines="2"
                        android:text="@string/worked_pitch" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="16dp" />

                    <TextView
                        android:id="@+id/tv_worked_pitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/blue"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/working_status_shape"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/tv_working_pitch_title"
                        style="@style/BaseTextStyleBlack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:minLines="2"
                        android:text="@string/working_pitch" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="16dp" />

                    <TextView
                        android:id="@+id/tv_working_pitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/main_color"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/empty_status_shape"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/tv_empty_pitch_title"
                        style="@style/BaseTextStyleBlack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:minLines="2"
                        android:text="@string/empty_pitch" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="16dp" />

                    <TextView
                        android:id="@+id/tv_empty_pitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/gray"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/revenue_shape"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_revenue" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/revenue_of_the_day"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="8dp" />

                <TextView
                    android:id="@+id/tv_revenue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/main_color"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="16dp" />

            <com.sport.footballbooking.ui.common.TabBarCustom
                android:id="@+id/tab_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/chart_revenue"
                android:layout_width="match_parent"
                android:layout_height="300dp" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>
